--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -266,6 +266,7 @@ jobs:
           key: ${{ matrix.info.target }}
           cache-all-crates: true
 
+      # TODO: Make this deny warnings
       - name: Clippy (default features)
         uses: ClementTsang/cargo-action@2438cc5f3ba4e971289fffca2a00dedea6911f14 # v0.0.7
         if: ${{ matrix.info.no-default-features != true }}
@@ -295,14 +296,10 @@ jobs:
           # Seems like cross's FreeBSD image is a bit broken? I get build errors,
           # may be related to this issue: https://github.com/cross-rs/cross/issues/1291
           # Alas, that's why we do it with VMs.
+          # TODO: Check if this is still the case!
           - { os_release: "13.5", target: "x86_64-unknown-freebsd" }
           - { os_release: "14.3", target: "x86_64-unknown-freebsd" }
           - { os_release: "15.0", target: "x86_64-unknown-freebsd" }
-
-          # We also just use VMs for NetBSD since it's easier for now.
-          # TODO: we can test Cross later for netbsd.
-          - { os_release: "9.4", target: "x86_64-unknown-netbsd" }
-          - { os_release: "10.1", target: "x86_64-unknown-netbsd" }
 
           # OpenBSD is not very well-supported, given that it's tier 3. We skip clippy and only run basic tests + fmt.
           # We also use `--no-default-features` when building as starship-battery does not support OpenBSD.
