--- a/Cross.toml
+++ b/Cross.toml
@@ -4,5 +4,5 @@ passthrough = ["RUST_BACKTRACE", "BTM_GENERATE"]
 [target.x86_64-unknown-netbsd]
 pre-build = [
     "apt-get update && apt-get install -y --no-install-recommends curl xz-utils",
-    "td=$(mktemp -d) && curl -4 --retry 3 -sSfL 'http://ftp.netbsd.org/pub/NetBSD/NetBSD-9.3/amd64/binary/sets/base.tar.xz' | tar -C \"$td\" -xJ --wildcards './usr/lib/libkvm*' && cp \"$td\"/usr/lib/libkvm* /usr/local/x86_64-unknown-netbsd/lib/ && rm -rf \"$td\"",
+    "td=$(mktemp -d) && mkdir -p \"$td/netbsd\" && curl -4 --retry 3 -sSfL 'http://ftp.netbsd.org/pub/NetBSD/NetBSD-9.3/amd64/binary/sets/base.tar.xz' | tar -C \"$td/netbsd\" -xJ --wildcards './usr/lib/libkvm*' && curl -4 --retry 3 -sSfL 'http://ftp.netbsd.org/pub/NetBSD/NetBSD-9.3/amd64/binary/sets/comp.tar.xz' | tar -C \"$td/netbsd\" -xJ --wildcards './usr/lib/libkvm*' && cp \"$td\"/netbsd/usr/lib/libkvm* /usr/local/x86_64-unknown-netbsd/lib/ && rm -rf \"$td\"",
 ]
